# otus-cpp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  annotated.html  application_8cpp.html  application_8cpp__incl.map  application_8cpp__incl.md5  application_8h.html  application_8h__dep__incl.map  application_8h__dep__incl.md5  application_8h__incl.map  application_8h__incl.md5  application_8h_source.html  classApplicationController-members.html  classApplicationController.html  classApplicationController__coll__graph.map  classApplicationController__coll__graph.md5  classCircle-members.html  classCircle.html  classCircle__coll__graph.map  classCircle__inherit__graph.md5  classColor-members.html  classColor.html  classDocument-members.html  classDocument.html  classEditor-members.html  classEditor.html  classEditor__inherit__graph.map  classEditor__inherit__graph.md5  classEventListener-members.html  classEventListener.html  classEventProvider-members.html  classEventProvider.html  classLine-members.html  classLine.html  classLine__coll__graph.md5  classLine__inherit__graph.map  classPrimitive-members.html  (+142 more)
.github/workflows/: doxygen.yml  release.yml  validate.yml
cmake/: macros.cmake
include/: roots.h  version.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_5.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_1.js  files_4.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  functions_3.js  functions_7.js  functions_8.js  (+15 more)
src/: CMakeLists.txt
src/01-version/: CMakeLists.txt  main.cpp  version.h.in
src/02-ip/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
src/03-allocator/: CMakeLists.txt  allocator.h  container.h  main.cpp
src/04-print_ip/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
src/05-editor/: CMakeLists.txt  lib.h  main.cpp
src/05-editor/controllers/: application.cpp  application.h  editor.cpp  editor.h  listener.h  provider.h
src/05-editor/models/: color.h  coords.h  document.cpp  document.h  primitives.cpp  primitives.h
src/05-editor/views/: viewport.cpp  viewport.h
src/06-matrix/: CMakeLists.txt  lib.h  main.cpp
src/07-package-cmds/: CMakeLists.txt  event.h  lib.cpp  lib.h  listener.h  logger.cpp  logger.h  main.cpp  packer.cpp  packer.h  provider.h  reader.cpp  reader.h  saver.cpp  saver.h
src/08-bayan/: CMakeLists.txt  app.cpp  app.h  lib.cpp  lib.h  main.cpp
src/09-async/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
src/09-async/shared/: CMakeLists.txt  async.cpp  async.h  queue.h  receiver.h  thread-listener.cpp  thread-listener.h
src/10-bulk_server/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  server.cpp  server.h
src/11-join_server/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  server.cpp  server.h
src/12-mapreduce/: CMakeLists.txt
src/12-mapreduce/mapper_column/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
src/12-mapreduce/reducer_avg/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
src/12-mapreduce/reducer_var/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
src/12-mapreduce/sh/: run_avg.sh  run_var.sh
tests/: CMakeLists.txt
tests/01-version/: CMakeLists.txt  test_version.cpp
tests/02-ip/: CMakeLists.txt  test_ip_filter.cpp
tests/04-print_ip/: CMakeLists.txt  test_print_ip.cpp
tests/12-mapreduce/: CMakeLists.txt  test_mapreduce.cpp
